<resources>
    <string name="app_name">Taif Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about">About</string>
    <string name="phoneTitle">Phone:</string>
    <string name="whTitle">Working Hours:</string>
    <string name="attractionsAndParks">Attractions And Parks</string>
    <string name="museums">Museums</string>
    <string name="malls">Malls</string>
    <string name="restaurants">Restaurants</string>
    <string name="hotels">Hotels</string>
    <string name="touristCallCenter">Tourist Call Center:</string>
    <string name="insideKsa">Inside KSA: 19988</string>
    <string name="International">International: +966–011–2614750</string>
    <string name="imagePlace">Image of the Place</string>
    <string name="about1">This App was developed by: Amer Alahmar</string>
    <string name="about2">Email: alahmar.amer@gmail.com</string>
    <string name="about3">I don\'t own the copyright of any of the Images or Information in the App</string>
    <string name="about4">Sources of the information:</string>
    <string name="about5">- tripadvisor.com\n- sauditourism.sa\n- taiftourism.sa\n- booking.com</string>
    <string name="wahbahName">Al Wahbah crater</string>
    <string name="wahbahShortDesc">The Al Wahbah crater is a volcanic crater, which is about 250 Km away from Taif.</string>
    <string name="wahbahLongDesc">The Al Wahbah crater (Maqla Tamia in Arabic) is a volcanic crater, which is about 250 kilometers away from Taif, Saudi Arabia, on the western edge of the Harrat Kishb basalt plateau. The Harrat Kishb plateau contains many volcanic cones. It is 250 m (820 ft) deep and 2 km (1.2 mi) in diameter. The bottom of the crater is covered with white sodium phosphate crystals.\n\nIt takes a person 45–60 minutes to go to the bottom of the crater. This crater is very slippery and it is hard for people to come up to the surface. To climb back up takes approx 60–90 minutes. There is some mobile phone signal within the crater, and the site receives very few visitors indeed, even over weekends.\n\nWhile it was thought for some time that the crater was formed by a meteorite, as its appearance resembles that of the Barringer Crater, with its circular form and high sides, it is now commonly accepted by geologists that the crater is a maar crater, and was formed by volcanic activity in the form of an underground phreatic eruption – a massive steam explosion generated by molten basaltic magma coming into contact with subterranean water.</string>
    <string name="wahbahWh">All week: 24 Hours.</string>
    <string name="wahbahLocation">22.901072,41.139164</string>
    <string name="dakaName">Jabal Daka</string>
    <string name="dakaShortDesc">Jabal Daka (Dhaka Mount), is the highest mountain in the city of Taif, located in the west of Saudi Arabia.</string>
    <string name="dakaLongDesc">The mountain is located 20 kilometers south-west of Taif. It overlooks the Shifa tourist center. The mountain is used to know the dates of prayer, fasting, and breakfast in the month of Ramadan. The vegetation of the mountain is covered with juniper trees, the plant covers the bottom of the mountain and then gradually thins out until it reaches the top. The temperature of the top reaches below 0°C in the winter. The mountain has a tourist resort just 7 km away from the Shifa.</string>
    <string name="dakaWh">All week: 24 Hours.</string>
    <string name="dakaLocation">21.093586,40.291441</string>
    <string name="rudafName">Al Rudaf Park</string>
    <string name="rudafShortDesc">A large natural park in the south of Taif.</string>
    <string name="rudafLongDesc">A large natural park in the south of Taif where trees stand amidst magnificent weathered granite rocks. Good place for family and friends to relax, enjoy and play, it has basketball courts, football grounds with sitting place for spectators, Families can enjoy sitting in the park, children and young boys can play\nIt's a Beautiful, well-maintained place. No entry fee and all the playing areas inside are free.</string>
    <string name="rudafWh">Sunday: Closed.\nOther days: 4 PM - 2 AM.</string>
    <string name="rudafLocation">21.229756,40.424883</string>
    <string name="saiysadName">Saiysad National park</string>
    <string name="saiysadShortDesc">A huge park contains a very nice natural views.</string>
    <string name="saiysadLongDesc">It’s a good place to visit if you have time in hand and have nothing to do on that day. There are a lot of gates present all around the park but you can get in only through one of them. However, traveling in large groups is recommended as the place is kind of isolated. Strolling around this park could be fun if you have kids. There are a few slides and some swings that your children can enjoy on.</string>
    <string name="saiysadWh">All week: 24 Hours.</string>
    <string name="saiysadLocation">21.293441,40.494085</string>
    <string name="albaikName">Albaik</string>
    <string name="albaikShortDesc">Albaik\'s vision: Putting MMMMMs and WOOOWs on our customers’ lips, every time, everywhere, the world over.</string>
    <string name="albaikLongDesc">Al Baik is a major fast food restaurant chain in Saudi Arabia that primarily sells broasted chicken and shrimp with a variety of sauces. It is one of the major consumers of chicken in Saudi Arabia.\n\nCuisine:  Fast Food, Halal.\nMeals:  Lunch, Dinner.\nRestaurant features:  Takeout, Seating.\nGood for:  Kids, Families with children.</string>
    <string name="albaikPhone">+966122866777</string>
    <string name="albaikWh">Friday: 1 PM - 12 AM.\nOther days: 10 AM - 12 AM.</string>
    <string name="albaikLocation">21.510695,40.487277</string>
    <string name="hirrman1Name">Hirrman Restaurant</string>
    <string name="hirrman1ShortDesc">Best restaurant serves Saleeq Saudi traditional meal in Taif.</string>
    <string name="hirrman1LongDesc">Cuisine:  Traditional, Deserts.\nMeals:  Lunch, Dinner.\nRestaurant features:  Takeout, Seating.\nGood for:  Families with children.</string>
    <string name="hirrman1Phone">+966127377272</string>
    <string name="hirrman1Wh">All week: 10 AM - 2 AM.</string>
    <string name="hirrman1Location">21.268522,40.400665</string>
    <string name="mabshoorName">Mabshoor Al Taif</string>
    <string name="mabshoorShortDesc">Best restaurant in the Taif city if you are a meat lover.</string>
    <string name="mabshoorLongDesc">Cuisine:  Traditional, Grills, Deserts.\nMeals:  Lunch, Dinner.\nRestaurant features:  Takeout, Seating.\nGood for:  Large groups, Families with children.</string>
    <string name="mabshoorPhone">+966555722459</string>
    <string name="mabshoorWh">All week: 1 PM - 3 PM, 6 PM - 12 AM.</string>
    <string name="mabshoorLocation">21.287296,40.423130</string>
    <string name="mirageName">Mirage</string>
    <string name="mirageShortDesc">From food quality and cost perspective, it is the best Indian restaurant in Taif.</string>
    <string name="mirageLongDesc">Cuisine:  Indian, Asian, Vegetarian-Friendly, Vegan Options.\nMeals:  Dinner, Brunch, Lunch.\nRestaurant features:  Takeout, Seating, Waitstaff.\nGood for:  Large groups, Families with children.</string>
    <string name="miragePhone">+966127484444</string>
    <string name="mirageWh">Sunday: 1 PM - 12 AM.\nOther days: 1 PM - 1 AM.</string>
    <string name="mirageLocation">21.233262,40.410999</string>
    <string name="vitaminName">Vitamin Palace</string>
    <string name="vitaminShortDesc">Specialize in wide varieties of delicious fresh Juices and fast food.</string>
    <string name="vitaminLongDesc">Cuisine:  Middle Eastern, Deserts, Fast Food.\nMeals:  Lunch, Dinner.\nRestaurant features:  Takeout, Seating, Waitstaff, Street Parking, Accepts Credit Cards.</string>
    <string name="vitaminPhone">+966127323073</string>
    <string name="vitaminWh">All week: 1 PM - 2 AM.</string>
    <string name="vitaminLocation">21.278449,40.413856</string>
    <string name="chinaName">China Restaurant</string>
    <string name="chinaShortDesc">Serves authentic Chinese food from the famous Sichuan cuisine by Chinese chefs.</string>
    <string name="chinaLongDesc">Cuisine:  Chinese, Vegetarian-Friendly.\nMeals: Lunch, Dinner.\nRestaurant features: Takeout, Seating.\nGood for:  Large groups, Families with children.</string>
    <string name="chinaPhone">+966127490372</string>
    <string name="chinaWh">Friday: 1 PM - 12 AM.\nOther days: 12 PM - 12 AM.</string>
    <string name="chinaLocation">21.264606,40.411007</string>
    <string name="gustoName">Gusto</string>
    <string name="gustoShortDesc">Nice Italian food at affordable prices in a quiet ambiance.</string>
    <string name="gustoLongDesc">Cuisine:  Italian.\nMeals:  Lunch, Dinner.\nRestaurant features:  Takeout, Seating.\nGood for:  Large groups, Kids, Families with children.</string>
    <string name="gustoPhone">+966127444442</string>
    <string name="gustoWh">All week: 1 PM - 1 AM.</string>
    <string name="gustoLocation">21.253650,40.410872</string>
    <string name="intercontinentalName">Intercontinental</string>
    <string name="intercontinentalShortDesc">Elegant hotel with views over mountains Taif.</string>
    <string name="intercontinentalLongDesc">This Taif hotel is situated at an elevation of 5,577 feet in the Hejaz Mountains, the Kingdom’s most desirable resort area. Enjoy cooler temperatures, abundant sunshine, and picturesque surroundings while taking advantage of the hotel’s heated indoor pool, tennis courts, and Hawazen restaurant. Relax in one of the 179 elegantly appointed guest rooms or explore Al Hada Mountain, Shubra Palace, and King Fahd Park. If shopping is your aim, browse local souks for spices, perfumes, and handicrafts.</string>
    <string name="intercontinentalPhone">+966127505050</string>
    <string name="intercontinentalLocation">21.371019,40.461999</string>
    <string name="meridienName">Le Meridien Al Hada</string>
    <string name="meridienShortDesc">The celebrity treatment with world-class service.</string>
    <string name="meridienLongDesc">Situated on the highest peak of Taif’s mountain range, this hotel features a marble lobby and spacious guest accommodations. There is an indoor and outdoor swimming pool, as well as a gym and sauna.\nA buffet breakfast is served daily in the dining room with its sparkling chandeliers, paintings, and thick curtains. It takes a 15-minute drive to reach a variety of restaurants in the center.\nThe 24-hour reception staff can arrange car rentals. Taif Regional Airport is a 30-minute drive away, while Mekkah can be reached within 45 minutes.</string>
    <string name="meridienPhone">+966127541400</string>
    <string name="meridienLocation">21.286632,40.392220</string>
    <string name="boudlName">Boudl Taif</string>
    <string name="boudlShortDesc">Located in the City of Ta’if, well known for its agriculture.</string>
    <string name="boudlLongDesc">Boudl Taif hotel offers air-conditioned rooms with free Wi-Fi. It has a 24-hour front desk and an elevator. Free public parking is available on site. The rooms feature a modern décor and are fitted with carpeted floors. Each includes a seating area with sofa, a flat-screen TV, and a minibar. Some rooms include a kitchenette and a dining area.\n\nTaif Regional Airport is just a 30-minute drive from Boudl Taif. Shubra Palace is 15 minutes drive away. Guests can also visit the famous Rudaf Park which is within a walking distance from the hotel.</string>
    <string name="boudlPhone">+966920000666</string>
    <string name="boudlLocation">21.233985,40.411211</string>
    <string name="awalivName">Awaliv Suites</string>
    <string name="awalivShortDesc">A good place to stay in Taif, close to city center with parking availability.</string>
</resources>