<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/parksItem"
            android:icon="@drawable/ic_playground"
            android:title="@string/attractionsAndParks" />
        <item
            android:id="@+id/museumsItem"
            android:icon="@drawable/ic_museum"
            android:title="@string/museums" />
        <item
            android:id="@+id/mallsItem"
            android:icon="@drawable/ic_shopping"
            android:title="@string/malls" />
        <item
            android:id="@+id/restaurantsItem"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/hotelsItem"
            android:icon="@drawable/ic_hotel"
            android:title="@string/hotels" />
    </group>
</menu>
