<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AboutActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about3"
        style="@style/subMainText"
        android:textColor="@android:color/holo_red_dark"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about4"
        style="@style/subMainText"
        android:layout_margin="0dp"
        android:padding="0dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about5"
        style="@style/subMainText"
        android:layout_margin="0dp"
        android:padding="0dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about1"
        style="@style/subMainText"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about2"
        style="@style/subMainText"
        android:layout_marginTop="0dp"
        />

</LinearLayout>